[gd_scene load_steps=7 format=3 uid="uid://m5pxvi7avooy"]

[ext_resource type="Script" path="res://Core/UI/HUD/PlayerInterface/skill_lists_container.gd" id="1_dmsxe"]
[ext_resource type="PackedScene" uid="uid://sc70hdt2ucgy" path="res://Core/UI/HUD/PlayerInterface/passive_skills_list.tscn" id="2_4sgap"]
[ext_resource type="Script" path="res://Core/UI/HUD/PlayerInterface/skill_active_list.gd" id="2_v8vk0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8wfgb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lctya"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ne4gt"]
bg_color = Color(0.929412, 0.6, 0.6, 1)

[node name="SkillListsContainer" type="Control"]
layout_mode = 3
anchor_top = 0.25
anchor_right = 0.235
anchor_bottom = 0.883
offset_left = 4.0
offset_right = 0.279968
offset_bottom = -0.184021
script = ExtResource("1_dmsxe")

[node name="PassiveSkillsList" parent="." instance=ExtResource("2_4sgap")]
unique_name_in_owner = true
layout_mode = 0

[node name="ActiveSkillsList" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.722
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0200195
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8wfgb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lctya")
theme_override_styles/hovered = SubResource("StyleBoxFlat_ne4gt")
allow_search = false
text_overrun_behavior = 2
max_columns = 3
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2i(48, 48)
script = ExtResource("2_v8vk0")
